--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs-alt/axios": "^1.1.0",
     "@pinia/nuxt": "^0.11.1",
     "nuxt": "^3.17.6",
     "vue": "^3.5.17",
