--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "chzzk": "^1.10.4",
     "nuxt": "^3.17.6",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-spinners": "^1.3.1"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0"
