feature - 유튜브 채널에도 접근 가능
- 이제 UI를 업데이트 해야 함

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@googleapis/youtube": "^27.0.1",
     "@nuxtjs-alt/axios": "^1.1.0",
     "@pinia/nuxt": "^0.11.1",
     "chzzk": "^1.10.4",
