--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs-alt/axios": "^1.1.0",
     "@pinia/nuxt": "^0.11.1",
     "chzzk": "^1.10.4",
+    "eventsource-client": "^1.1.4",
     "nuxt": "^3.17.6",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
