--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@pinia/nuxt": "^0.11.1",
     "chzzk": "^1.10.4",
     "eventsource-client": "^1.1.4",
+    "lodash": "^4.17.21",
     "nuxt": "^3.17.6",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
-    "vue3-spinners": "^1.3.1"
+    "vue3-spinners": "^1.3.1",
+    "zod": "^4.0.8"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.14.0"
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@types/lodash": "^4.17.20"
   }
 }
