--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eventsource-client": "^1.1.4",
     "lodash": "^4.17.21",
     "nuxt": "^3.17.6",
+    "uuid": "^11.1.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
     "vue3-spinners": "^1.3.1",
